Feed screen: Implemented feed element cell. Implemented display of feeds data

--- a/RSS/Resources/Localization/Base.lproj/Localizable.strings
+++ b/RSS/Resources/Localization/Base.lproj/Localizable.strings
@@ -10,3 +10,7 @@
 
 //Errors
 "invalidServerResponseErrorText" = "Invalid server response. Failed to parse";
+
+//RSS
+"Feed.emptyText" = "RSS feed is empty";
+"Feed.reloadText" = "Updating news...";
